course-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      # affinity:
      #   podAntiAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       - labelSelector:
      #           matchExpressions:
      #             - key: app
      #               operator: In
      #               values:
      #                 - web
      #         topologyKey: "kubernetes.io/hostname"
      volumes:
        - name: storage-volume
          persistentVolumeClaim:
            claimName: storage
        - name: web-config
          configMap:
            name: web
      containers:
        - name: assignments
          image: jlphillips/jhub-assignment-system:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: storage-volume
              mountPath: /var/www/storage
            - name: web-config
              mountPath: /etc/apache2/mods-enabled/alias.conf
              subPath: alias.conf
            - name: web-config
              mountPath: /etc/apache2/sites-enabled/000-default.conf
              subPath: 000-default.conf
            - name: web-config
              mountPath: /etc/apache2/mods-enabled/rewrite.load
              subPath: rewrite.load
            - name: web-config
              mountPath: /usr/local/etc/php/php.ini
              subPath: php.ini
          ports:
            - containerPort: 80
