jhub-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: k3d-local
spec:
  entryPoints: # We listen to requests coming from ports 80 and 443
    - web
  routes:
    - match: Host(`k3d.local`)
      kind: Rule
      services:
        - name: proxy-public # Requests will be forwarded to this service
          port: 80
